--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="apple-touch-icon" href="/icon.png">
 
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/take-it-hard/css/bootstrap.min.css">
 
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -22,9 +22,9 @@
       }
     </style>
 
-    <script src="/js/easeljs.min.js"></script>
-    <script src="/js/jquery-3.2.1.min.js"></script>
-    <script src="/js/app2.js"></script>
+    <script src="/take-it-hard/js/easeljs.min.js"></script>
+    <script src="/take-it-hard/js/jquery-3.2.1.min.js"></script>
+    <script src="/take-it-hard/js/app2.js"></script>
 
   </head>
 
