correct icon path.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <link rel="apple-touch-icon" href="/icon.png">
+    <link rel="apple-touch-icon" href="/take-it-hard/icon.png">
 
     <link rel="stylesheet" href="/take-it-hard/css/bootstrap.min.css">
 
